[package]

name = "nn"
version = "0.1.6"
authors = ["Jack Montgomery <jackm321@gmail.com>"]
repository = "https://github.com/jackm321/RustNN"
documentation = "https://jackm321.github.io/RustNN/doc/nn/"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = """
A multilayer feedforward backpropagation neural network library
"""

keywords = ["nn", "neural-network", "classifier", "backpropagation",
            "machine-learning"]

[dependencies]
rand = "0.7.2"
time = "0.1.42"
serde = { version = "1.0", features = ["derive"] }